--- a/pages/hello.html
+++ b/pages/hello.html
@@ -34,6 +34,8 @@
         </div>
         
     </header>
+
+    <!-- Javascript files -->
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
