--- a/pages/hello.html
+++ b/pages/hello.html
@@ -7,31 +7,41 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style/hello.css">
+    <link rel="stylesheet" href="../assets/style/base.css">
 </head>
-<body>
-    <header>
-        <div class="container">
-            <div class=" header row justify-content-between">
-                <div class="logo col-2 d-flex align-items-center">
+<body class="bg-black">
+    <header class="bg-web">
+        <div class="container ">
+            <div class=" header row justify-content-between ">
+                <div class="logo col-md-2 col-10 d-flex align-items-center">
                     <img class="img-logo" src="../assets/image/logo.png" alt="">
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
-                <div class="nav col-10 row justify-content-between align-items-center">
-                    <div class="nav-menu col-5 ">
+                <div class="icon-menu col-2 d-flex align-items-center ">
+                    <img src="../assets/image/menu(1).png" alt="">
+                </div>
+                <div class="nav col-md-10 col-9 row justify-content-between align-items-center">
+                    <div class="icon-close">
+                        <img src="../assets/image/close-button.png" alt="">
+                    </div>
+                    <div class="nav-menu row col-md-5 col-12 ">
                         <ul class=" list-unstyled mb-0 ">
                             <li class="d-inline-block me-4"><a class="text-decoration-none text-light" href="">CƠ HỘI VIỆC LÀM</a></li>
                             <li class="d-inline-block"><a class="text-decoration-none text-light" href="">DANH SÁCH CÔNG TY</a></li>
                         </ul>
                     </div>
-                    <div class="col-6">
-                        <a href="">ĐĂNG NHẬP</a>
-                        <a href="">ĐĂNG KÝ</a>
-                        <button>NHÀ TUYỂN DỤNG <img src="./img/Arrow 1.png" alt=""></button>
+                    <div class="col-md-6 row justify-content-between align-items-center">
+                        <div class="sign-up col-md-6 col-12">
+                            <a class=" fs-14 text-decoration-none me-4 text-light" href="">ĐĂNG NHẬP</a>
+                            <a class=" fs-14 text-decoration-none text-light" href="">ĐĂNG KÝ</a> 
+                        </div>
+                        <div class="col-md-6 col-12">
+                            <button class="p-2 fs-14 btn-employer bg-btn border-0">NHÀ TUYỂN DỤNG <img src="../assets/image/Arrow 1.png" alt=""></button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
