--- a/pages/hello.html
+++ b/pages/hello.html
@@ -18,7 +18,7 @@
                     <img class="img-logo" src="../assets/image/logo.png" alt="">
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
-                <div class="icon-menu col-2 d-flex align-items-center ">
+                <div class="icon-menu col-2 align-items-center ">
                     <img src="../assets/image/menu(1).png" alt="">
                 </div>
                 <div class="nav col-md-10 col-9 row justify-content-between align-items-center">
@@ -46,6 +46,8 @@
     </header>
 
     <!-- Javascript files -->
+    <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/javascript/hello.js"></script>
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
