--- a/pages/hello.html
+++ b/pages/hello.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="../assets/style/hello.css">
     <link rel="stylesheet" href="../assets/style/base.css">
 </head>
-<body class="bg-black">
+<body>
+    <!------------HEADER------------------>
     <header class="bg-web">
         <div class="container ">
-            <div class=" header row justify-content-between ">
-                <div class="logo col-md-2 col-10 d-flex align-items-center">
+            <div class=" header d-flex row justify-content-between ">
+                <div class="logo col-md-2  col-10 d-flex align-items-center">
                     <img class="img-logo" src="../assets/image/logo.png" alt="">
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
@@ -25,7 +26,7 @@
                     <div class="icon-close">
                         <img src="../assets/image/close-button.png" alt="">
                     </div>
-                    <div class="nav-menu row col-md-5 col-12 ">
+                    <div class="nav-menu row col-md-6 col-12 ">
                         <ul class="list-unstyled mb-0 ">
                             <li class="d-inline-block me-4"><a class="text-decoration-none text-light" href="">CƠ HỘI VIỆC LÀM</a></li>
                             <li class="d-inline-block"><a class="text-decoration-none text-light" href="">DANH SÁCH CÔNG TY</a></li>
@@ -44,7 +45,7 @@
             </div>
         </div>
     </header>
-
+    <!------------END HEADER------------------>
     <!-- Javascript files -->
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
     <script src="../assets/javascript/hello.js"></script>
