--- a/pages/hello.html
+++ b/pages/hello.html
@@ -22,7 +22,7 @@
                 <div class="icon-menu col-2 align-items-center ">
                     <img src="../assets/image/menu(1).png" alt="">
                 </div>
-                <div class="nav col-md-10 col-9 row justify-content-between align-items-center">
+                <div class="nav d-md-flex col-md-10 col-9 row justify-content-between align-items-center">
                     <div class="icon-close">
                         <img src="../assets/image/close-button.png" alt="">
                     </div>
@@ -46,6 +46,24 @@
         </div>
     </header>
     <!------------END HEADER------------------>
+    <div id="content" class="mt-5">
+        <div class="container">
+            <div class="search d-flex justify-content-between g3">
+                <div class="search-job p-1 col-5">
+                    <img src="../assets/image/search.png" alt="">
+                    <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
+                </div>
+                <div class="search-location p-1 col-5">
+                    <img src="../assets/image/location.png" alt="">
+                    <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
+                </div>
+                <div class="btn-search">
+                    <button class="text-light border-0 h-100 bg-web">TÌM KIẾM</button>
+                </div>
+            </div>
+        </div>
+        
+    </div>
     <!-- Javascript files -->
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
     <script src="../assets/javascript/hello.js"></script>
