--- a/pages/hello.html
+++ b/pages/hello.html
@@ -37,8 +37,8 @@
                             <a class=" fs-14 text-decoration-none me-4 text-light" href="">ĐĂNG NHẬP</a>
                             <a class=" fs-14 text-decoration-none text-light" href="">ĐĂNG KÝ</a> 
                         </div>
-                        <div class="col-md-6 col-12">
-                            <button class="p-2 fs-14 btn-employer bg-btn border-0">NHÀ TUYỂN DỤNG <img src="../assets/image/Arrow 1.png" alt=""></button>
+                        <div class="col-md-6 col-12 ">
+                            <button class="float-md-end p-2 fs-14 btn-employer bg-btn border-0">NHÀ TUYỂN DỤNG <img src="../assets/image/Arrow 1.png" alt=""></button>
                         </div>
                     </div>
                 </div>
@@ -48,17 +48,17 @@
     <!------------END HEADER------------------>
     <div id="content" class="mt-5">
         <div class="container">
-            <div class="search d-flex justify-content-between g3">
-                <div class="search-job p-1 col-5">
+            <div class="search d-flex row justify-content-between gy-3">
+                <div class="search-job p-1 col-md-5 col-12">
                     <img src="../assets/image/search.png" alt="">
                     <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
                 </div>
-                <div class="search-location p-1 col-5">
+                <div class="search-location p-1 col-md-5 col-12">
                     <img src="../assets/image/location.png" alt="">
                     <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
                 </div>
                 <div class="btn-search">
-                    <button class="text-light border-0 h-100 bg-web">TÌM KIẾM</button>
+                    <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
         </div>
