mới ngủ dậy nên push

--- a/pages/hello.html
+++ b/pages/hello.html
@@ -46,9 +46,9 @@
         </div>
     </header>
     <!------------END HEADER------------------>
-    <div id="content" class="mt-5">
+    <div id="content" class="">
         <div class="container">
-            <div class="search d-flex row justify-content-between gy-3">
+            <div class="my-5 search d-flex row justify-content-between gy-3">
                 <div class="search-job p-1 col-md-5 col-12">
                     <img src="../assets/image/search.png" alt="">
                     <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
@@ -59,6 +59,16 @@
                 </div>
                 <div class="btn-search">
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
+                </div>
+            </div>
+            <div class="member-registration">
+                <div class="register-adv pt-2 col-6">
+                    <h2 class="fs-4 text-noto-b">ĐẨY NHANH QUÁ TRÌNH ỨNG TUYỂN <br>
+                    KHI BẠN LÀ THÀNH VIÊN CỦA THE WALL</h2>
+                    <p class="fs-14 text-noto-re w-75">
+                        Trở thành thành viên The Wall để khám phá thêm nhiều cơ hội việc làm hấp dẫn với thu nhập cao
+                    </p>
+                    <button class="btn-sign-in border-0 bg-btn fs-14 text-noto-b p-2">ĐĂNG KÝ NGAY</button>
                 </div>
             </div>
         </div>
