--- a/pages/hello.html
+++ b/pages/hello.html
@@ -61,14 +61,67 @@
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
-            <div class="member-registration">
-                <div class="register-adv pt-2 col-6">
+            <div class=" row member-registration d-flex">
+                <div class="register-adv p-0 col-md-6 col-12">
                     <h2 class="fs-4 text-noto-b">ĐẨY NHANH QUÁ TRÌNH ỨNG TUYỂN <br>
                     KHI BẠN LÀ THÀNH VIÊN CỦA THE WALL</h2>
-                    <p class="fs-14 text-noto-re w-75">
+                    <p class="fs-14 my-3 text-noto-re w-75">
                         Trở thành thành viên The Wall để khám phá thêm nhiều cơ hội việc làm hấp dẫn với thu nhập cao
                     </p>
-                    <button class="btn-sign-in border-0 bg-btn fs-14 text-noto-b p-2">ĐĂNG KÝ NGAY</button>
+                    <button class="btn-sign-in my-3 border-0 bg-btn fs-14 text-noto-b p-2">ĐĂNG KÝ NGAY</button>
+                </div>
+                <div class="review-member col-md-6 col-12">
+                    <div class="review p-4">
+                        <div class="review-item mb-4 position-relative" id="card_1">
+                            <div class="review-card p-4 position-relative bg-white">
+                                <p class="review-content ">
+                                    Mình nhận được công việc, môi trường, lương & phúc lợi tốt. 
+                                    Mình được hỗ trợ rất nhiệt tình và tận tâm bởi bạn Chuyên viên 
+                                    Tuyển dụng từ The Wall
+                                </p>
+                                <div class="text-end">
+                                    <p class="mb-0">Đỗ Duy Phúc</p>
+                                </div>
+                                <div class="img-quote position-absolute">
+                                    <img class="w-100 " src="../assets/image/hello/quote-left.png" alt="">
+                                </div>
+                            </div>
+                            <div class="card-shadow w-100 h-100 position-absolute"></div>
+                        </div>
+                        <div class="review-item mb-4 position-relative" id="card_2">
+                            <div class="review-card p-4 position-relative bg-white">
+                                <p class="review-content ">
+                                    Nếu có 3 từ để nói về trải nghiệm làm việc với The Wall, mình sẽ chọn: 
+                                    "chuyên nghiệp" trong cách tiếp cận với các bạn ứng viên; 
+                                    "lịch sự" trong ngôn từ và cách giao tiếp;
+                                </p>
+                                <div class="text-end">
+                                    <p class="mb-0">Trịnh Trung Dũng</p>
+                                </div>
+                                <div class="img-quote position-absolute">
+                                    <img class="w-100 " src="../assets/image/hello/quote-left.png" alt="">
+                                </div>
+                            </div>
+                            <div class="card-shadow w-100 h-100 position-absolute"></div>
+                        </div>
+                        <div class="review-item mb-4 position-relative" id="card_3">
+                            <div class="review-card p-4 position-relative bg-white">
+                                <p class="review-content ">
+                                    C&B trong công việc của mình rất rõ ràng, headhunt giao tiếp tốt. 
+                                    Mình nghĩ The Wall đã làm rất tốt.
+                                </p>
+                                <div class="text-end">
+                                    <p class="mb-0">Phạm Đăng Hưng</p>
+                                </div>
+                                <div class="img-quote position-absolute">
+                                    <img class="w-100 " src="../assets/image/hello/quote-left.png" alt="">
+                                </div>
+                            </div>
+                            <div class="card-shadow w-100 h-100 position-absolute"></div>
+                        </div>
+                        <div class="nav-button d-inline px-2" id="previous">&#10094;</div>
+                        <div class="nav-button d-inline px-2" id="next">&#10095;</div>
+                    </div>
                 </div>
             </div>
         </div>
