--- a/pages/hello.html
+++ b/pages/hello.html
@@ -61,9 +61,9 @@
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
-            <div class=" row member-registration d-flex">
+            <div class="row member-registration d-flex">
                 <div class="register-adv p-0 col-md-6 col-12">
-                    <h2 class="fs-4 text-noto-b">ĐẨY NHANH QUÁ TRÌNH ỨNG TUYỂN <br>
+                    <h2 class="fs-4 pt-4  text-noto-b">ĐẨY NHANH QUÁ TRÌNH ỨNG TUYỂN <br>
                     KHI BẠN LÀ THÀNH VIÊN CỦA THE WALL</h2>
                     <p class="fs-14 my-3 text-noto-re w-75">
                         Trở thành thành viên The Wall để khám phá thêm nhiều cơ hội việc làm hấp dẫn với thu nhập cao
@@ -124,8 +124,47 @@
                     </div>
                 </div>
             </div>
+            <!---------------------SỐ LIỆU QUẢNG BÁ--------------------------->
+            <div class="card-number d-flex row my-5">
+                <div class="col card-number-member p-4">
+                    <p>Chúng tôi đã giúp</p>
+                    <h2 class="text-noto-b">2.042.899</h2>
+                    <p class="text-medium">bạn trẻ khám phá nghề nghiệp mơ ước</p>
+                </div>
+                <div class="col card-number-member mx-5 p-4">
+                    <p>Chúng tôi đã đồng hành cùng</p>
+                    <h2 class="text-noto-b">40.590</h2>
+                    <p class="text-medium">công ty trên toàn cầu xây dựng 
+                        thành công đội ngũ nhân lực tài năng</p>
+                </div>
+                <div class="col card-number-member p-4">
+                    <p>Khám phá ngay</p>
+                    <h2 class="text-noto-b">90.139</h2>
+                    <p class="text-medium">cơ hội việc làm mới nhất được 
+                        cập nhật hàng tháng</p>
+                </div>
+            </div>
         </div>
-        
+        <!-------------------DANH SÁCH CÁC CÔNG VIỆC------------------------->
+        <div class="job-introduce">
+            <div class="container">
+                <div class="row d-flex my-5">
+                    <div class="list-job col-3">
+                        <ul class="list-unstyled ">
+                            <li>Thiết kế</li>
+                            <li>Tài chính</li>
+                            <li>Kỹ sư</li>
+                            <li>Nhân sự</li>
+                            <li>Quản lý dự án</li>
+                            <li>Kinh doanh/Sale</li>
+                            <li>Marketing</li>
+                            <li>Truyền thông</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
     <!-- Javascript files -->
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
