--- a/pages/hello.html
+++ b/pages/hello.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <!---------------------SỐ LIỆU QUẢNG BÁ--------------------------->
-            <div class="card-number d-flex row my-5">
+            <div class="card-number d-flex row my-5 pb-5">
                 <div class="col card-number-member p-4">
                     <p>Chúng tôi đã giúp</p>
                     <h2 class="text-noto-b">2.042.899</h2>
@@ -150,7 +150,7 @@
             </div>
         </div>
         <!-------------------DANH SÁCH CÁC CÔNG VIỆC------------------------->
-        <div class="job-introduce">
+        <div class="job-introduce mt-5">
             <div class="container">
                 <div class="row d-flex justify-content-between my-5">
                     <div class="list-job col-3">
@@ -165,7 +165,7 @@
                             <li id="job-8">Truyền thông</li>
                         </ul>
                     </div>
-                    <div class="des-information col-8 text-white text-noto-re">
+                    <div class="job-information col-8 text-white text-noto-re" id="design-introduce">
                         <h2 class="text-noto-b fs-3 w-50 d-inline-block pb-2">THIẾT KẾ</h2>
                         <p class="fs-14">
                             Thiết kế là việc tạo ra một bản vẽ hoặc quy ước nhằm tạo dựng một đối tượng, 
@@ -193,6 +193,33 @@
                                     </div>
                                     <div class=" swiper-slide" style="width:160px">
                                         <img class="scale-img" src="../assets/image/hello/des-11.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="job-information col-8 text-white text-noto-re" id="finance-introduce">
+                        <h2 class="text-noto-b fs-3 w-50 d-inline-block pb-2">TÀI CHÍNH</h2>
+                        <p class="fs-14">
+                            Một hoạt động kinh doanh riêng biệt bằng cách thông qua qua ngân hàng và 
+                            các công cụ tài chính của ngân hàng để thực hiện tất cả dịch vụ giao dịch tài chính, 
+                            lưu thông và vận hành tiền tệ bao gồm: bảo lãnh, thanh toán, chi trả trong nội địa và quốc tế
+                        </p>
+                        <ul class="fs-14">
+                            <li>1701 việc làm còn trống</li>
+                            <li>417 cơ hội việc làm</li>
+                        </ul>
+                        <div class="img-introduce px-5">
+                            <div class="swiper-container mt-4 pt-5 frame-swiper mySwiper-slide items-center w-7/12 mx-auto my-14">
+                                <div class="swiper-wrapper ">
+                                    <div class=" swiper-slide " style="width:160px">
+                                        <img class="scale-img" src="../assets/image/hello/fin-1.jpg" alt="">
+                                    </div>
+                                    <div class=" swiper-slide" style="width:160px">
+                                        <img class="scale-img" src="../assets/image/hello/fin-2.jpg" alt="">
+                                    </div>
+                                    <div class=" swiper-slide" style="width:160px">
+                                        <img class="scale-img" src="../assets/image/hello/fin-3.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
