--- a/pages/hello.html
+++ b/pages/hello.html
@@ -50,11 +50,11 @@
         </div>
     </header>
     <!------------END HEADER------------------>
-    <div id="content" class="">
+    <div id="content" class="text-noto-re">
         <div class="container">
-            <div class="my-5 search d-flex row justify-content-between gy-3">
+            <div class="my-5 px-md-0 px-4 search d-flex row justify-content-between gy-3">
                 <div class="search-job p-1 col-md-5 col-12">
-                    <img src="../assets/image/search.png" alt="">
+                    <img src="../assets/image/hello/search.png" alt="">
                     <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
                 </div>
                 <div class="search-location p-1 col-md-5 col-12">
@@ -65,7 +65,7 @@
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
-            <div class="row member-registration d-flex">
+            <div class="px-md-0 px-4 row member-registration d-flex">
                 <div class="register-adv p-0 col-md-6 col-12">
                     <h2 class="fs-4 pt-4  text-noto-b">ĐẨY NHANH QUÁ TRÌNH ỨNG TUYỂN <br>
                     KHI BẠN LÀ THÀNH VIÊN CỦA THE WALL</h2>
@@ -129,19 +129,19 @@
                 </div>
             </div>
             <!---------------------SỐ LIỆU QUẢNG BÁ--------------------------->
-            <div class="card-number d-flex row my-5 pb-5">
-                <div class="col card-number-member p-4">
+            <div class="card-number d-flex row my-5 pb-5 justify-content-center">
+                <div class="col-md col-10 card-number-member p-4">
                     <p>Chúng tôi đã giúp</p>
                     <h2 class="text-noto-b">2.042.899</h2>
                     <p class="text-medium">bạn trẻ khám phá nghề nghiệp mơ ước</p>
                 </div>
-                <div class="col card-number-member mx-5 p-4">
+                <div class="col-md my-4 my-md-0 col-10 card-number-member mx-md-5 p-4">
                     <p>Chúng tôi đã đồng hành cùng</p>
                     <h2 class="text-noto-b">40.590</h2>
                     <p class="text-medium">công ty trên toàn cầu xây dựng 
                         thành công đội ngũ nhân lực tài năng</p>
                 </div>
-                <div class="col card-number-member p-4">
+                <div class="col-md col-10 card-number-member p-4">
                     <p>Khám phá ngay</p>
                     <h2 class="text-noto-b">90.139</h2>
                     <p class="text-medium">cơ hội việc làm mới nhất được 
@@ -153,7 +153,7 @@
         <div class="job-introduce mt-5">
             <div class="container">
                 <div class="row d-flex justify-content-between my-5">
-                    <div class="list-job col-3">
+                    <div class="list-job col-md-3 col-12">
                         <ul class="list-unstyled ">
                             <li id="job-1">Thiết kế</li>
                             <li id="job-2">Tài chính</li>
@@ -165,7 +165,18 @@
                             <li id="job-8">Truyền thông</li>
                         </ul>
                     </div>
-                    <div class="job-information col-8 text-white text-noto-re" id="design-introduce">
+                    
+                    <div class="job-information col-12 col-md-8 text-white text-noto-re" id="design-introduce">
+                        <div class="select-job mb-4 ">
+                            <select name="job" id="" class="w-100 bg-dark text-white p-2 fs-14">
+                                <option value="">Thiết kế</option>
+                                <option value="">Tài chính</option>
+                                <option value="">Kỹ sư</option>
+                                <option value="">Nhân sự</option>
+                                <option value="">Quản lý dự án</option>
+                                <option value="">Kinh doanh/Sale</option>
+                            </select>
+                        </div>
                         <h2 class="text-noto-b fs-3 w-50 d-inline-block pb-2">THIẾT KẾ</h2>
                         <p class="fs-14">
                             Thiết kế là việc tạo ra một bản vẽ hoặc quy ước nhằm tạo dựng một đối tượng, 
@@ -176,8 +187,8 @@
                             <li>2399 việc làm còn trống</li>
                             <li>1017 cơ hội việc làm</li>
                         </ul>
-                        <div class="img-introduce px-5">
-                            <div class="swiper-container mt-4 pt-5 frame-swiper mySwiper-slide items-center w-7/12 mx-auto my-14">
+                        <div class="img-introduce px-md-5">
+                            <div class="swiper-container mt-4 pt-5 frame-swiper mySwiper-slide items-center mx-auto my-14">
                                 <div class="swiper-wrapper ">
                                     <div class=" swiper-slide " style="width:160px">
                                         <img class="scale-img" src="../assets/image/hello/des-4.jpg" alt="">
@@ -224,6 +235,51 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="benefit my-5 py-5">
+                <h2 class="fs-3 text-noto-b text-center">
+                    THAM GIA CỘNG ĐỒNG <span class="color-red fs-1">1.000.000+</span> ỨNG VIÊN TÀI NĂNG 
+                </h2>
+                <div class="list-benefit d-flex row justify-content-between">
+                    <div class="benefit-item position-relative shadow text-center col-3 p-3">
+                        <div class="icon-benefit position-absolute top-0 bg-web d-inline-block">
+                            <img src="../assets/image/hello/telescope.png" alt="">
+                        </div>
+                        <h4 class="fs-5 text-noto-b mb-3">
+                            KHÁM PHÁ <br>
+                            NGHỀ NGHIỆP MƠ ƯỚC
+                        </h4>
+                        <p>
+                            Khám phá nghề nghiệp mơ ước và ứng tuyển hàng ngàn việc 
+                            làm nổi bật nhất hiện nay.
+                        </p>
+                    </div>
+                    <div class="benefit-item mt-md-5 position-relative shadow text-center col-3 p-3 mt-10s">
+                        <div class="icon-benefit position-absolute top-0 bg-web d-inline-block">
+                            <img src="../assets/image/hello/rocket.png" alt="">
+                        </div>
+                        <h4 class="fs-5 text-noto-b mb-3">
+                            PHÁT TRIỂN<br>
+                            KỸ NĂNG CHUYÊN MÔN
+                        </h4>
+                        <p>
+                            Nắm bắt cơ hội phát triển kỹ thuật chuyên môn bản thân của bạn.
+                        </p>
+                    </div>
+                    <div class="benefit-item mt-10 mb-mt-0 position-relative shadow text-center col-3 p-3 mt-10s">
+                        <div class="icon-benefit position-absolute top-0 bg-web d-inline-block">
+                            <img src="../assets/image/hello/global-network.png" alt="">
+                        </div>
+                        <h4 class="fs-5 text-noto-b mb-3">
+                            KẾT NỐI VỚI CÔNG TY TRÊN TOÀN THẾ GIỚI
+                        </h4>
+                        <p>
+                            Đừng bỏ lỡ cơ hội kết nối với các công ty trên toàn cầu và nắm bắt cơ hội việc làm mới nhất
+                        </p>
                     </div>
                 </div>
             </div>
