--- a/pages/hello.html
+++ b/pages/hello.html
@@ -283,6 +283,83 @@
                     </div>
                 </div>
             </div>
+            <div class="user-review text-center position-relative">
+                <h2 class="fs-3 text-noto-b text-center">CẢM NHẬN CỦA NGƯỜI DÙNG <span>THE WALL</span> </h2>
+                <div class="list-review position-relative overflow-hidden">
+                    <div class="user-review-item" id="rv-1">
+                        <div class="img-review d-flex justify-content-center">
+                            <div class="img-small small-1 position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-1.png" alt="">
+                            </div>
+                            <div class="img-big mx-5">
+                                <img class="w-100" src="../assets/image/hello/user-2.png" alt="">
+                            </div>
+                            <div class="img-small small-2 position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-3.png" alt="">
+                            </div> 
+                        </div>
+                        <div class="name-user">
+                            <p class="text-noto-b m-0">Jis Ann</p>
+                            <p class="text-secondary text-noto-re fs-14">Front-end Dev</p>
+                        </div>
+                        <p class="rv-content">
+                            Tôi thực sự không biết mình muốn làm gì 
+                            - và chỉ đang khám phá các nghề nghiệp trên Glints 
+                            - giờ tôi đã khám phá ra những gì tôi thích làm và tìm thấy sự nghiệp mơ ước của mình!
+                        </p>
+                    </div>
+                    <div class="user-review-item"  id="rv-2">
+                        <div class="img-review d-flex justify-content-center">
+                            <div class="img-small position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-2.png" alt="">
+                            </div>
+                            <div class="img-big mx-5">
+                                <img class="w-100" src="../assets/image/hello/user-3.png" alt="">
+                            </div>
+                            <div class="img-small position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-1.png" alt="">
+                            </div> 
+                        </div>
+                        <div class="name-user">
+                            <p class="text-noto-b m-0">Jenny</p>
+                            <p class="text-secondary text-noto-re fs-14">Marketing</p>
+                        </div>
+                        <p class="rv-content">
+                            The Wall đã rất tuyệt vời khi giúp tôi phát triển kỹ năng của mình thông qua các đề xuất được cá nhân hóa! 
+                            Tôi đã tìm thấy nhiều khóa thực tập để phát triển kỹ năng của mình.
+                        </p>
+                    </div>
+                    <div class="user-review-item" id="rv-3">
+                        <div class="img-review d-flex justify-content-center">
+                            <div class="img-small position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-3.png" alt="">
+                            </div>
+                            <div class="img-big mx-5">
+                                <img class="w-100" src="../assets/image/hello/user-1.png" alt="">
+                            </div>
+                            <div class="img-small position-relative">
+                                <div class="over-img position-absolute top-0"></div>
+                                <img class="w-100" src="../assets/image/hello/user-2.png" alt="">
+                            </div> 
+                        </div>
+                        <div class="name-user">
+                            <p class="text-noto-b m-0">Kai</p>
+                            <p class="text-secondary text-noto-re fs-14">Design</p>
+                        </div>
+                        <p class="rv-content">
+                            Nền tảng này thực sự thuận tiện để liên hệ với các công ty và tôi đã nhận được 2 cuộc phỏng vấn rồi! 
+                            Tôi cũng có thể theo dõi tình trạng đơn đăng ký của mình thay vì tự hỏi liệu công ty đã nhìn thấy hoặc đưa tôi vào danh sách lựa chọn hay chưa.
+                        </p>
+                    </div>
+                </div>
+                <div class="nav-btn-review d-inline px-2 position-absolute" id="previous-rv">&#10094;</div>
+                <div class="nav-btn-review d-inline px-2 position-absolute" id="next-rv">&#10095;</div>
+            </div>
         </div>
     </div>
     <!-- Javascript files -->
