--- a/pages/hello.html
+++ b/pages/hello.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!------------HEADER------------------>
-    <header class="bg-web">
+    <header class="bg-web position-fixed top-0 w-100">
         <div class="container ">
             <div class=" header d-flex row justify-content-between ">
                 <div class="logo col-md-2  col-10 d-flex align-items-center">
@@ -50,7 +50,7 @@
         </div>
     </header>
     <!------------END HEADER------------------>
-    <div id="content" class="text-noto-re">
+    <div id="content" class="text-noto-re pt-5">
         <div class="container">
             <div class="my-5 px-md-0 px-4 search d-flex row justify-content-between gy-3">
                 <div class="search-job p-1 col-md-5 col-12">
@@ -362,6 +362,41 @@
             </div>
         </div>
     </div>
+    <footer class="bg-web mt-5">
+        <div class="container">
+            <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
+                <div class="introduce col-md-4 mt-3 pb-5">
+                    <div class="logo w-50 p-2 m-auto m-md-0">
+                        <img class="w-100" src="../assets/image/The Wall.png" alt="">
+                    </div>
+                    <p class="fs-14">
+                        The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
+                    </p>
+                    <div class="social-icon pt-4 d-flex justify-content-md-start justify-content-center">
+                        <img class="col-2" src="../assets/image/facebook.png" alt="">
+                        <img class="mx-5 col-2" src="../assets/image/linkedin-sign.png" alt="">
+                        <img class="col-2" src="../assets/image/twitter-sign.png" alt="">
+                    </div>
+                </div>
+                <div class="contact col-md-4 pt-5">
+                    <h3 class="fs-4">LIÊN HỆ</h3>
+                    <p class="fs-14">
+                        <strong>Địa chỉ:</strong> Tầng 6, Số 100, Đường Nguyễn Thị Minh Khai, Phường 06, Quận 3, Thành phố Hồ Chí Minh, Việt Nam
+                    </p>
+                    <p class="fs-14"><strong>Email:</strong> sales-vn@glints.com</p>
+                    <p class="fs-14"><strong>Hotline:</strong> (028) 7100 3030</p>
+                </div>
+                <div class="site-linking col-md-3 py-5">
+                    <h3 class="fs-4">CÁC TRANG LIÊN KẾT</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="">Cơ hội việc làm</a></li>
+                        <li><a href="">Danh sách công ty</a></li>
+                        <li><a href="">Vị trí ứng tuyển</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Javascript files -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
