--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Wall - Sign in</title>
+    <title>The Wall - Sign up</title>
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/style/sign-in.css">
+    <link rel="stylesheet" href="../assets/style/sign-up.css">
     <link rel="stylesheet" href="../assets/style/base.css">
+    
+
 </head>
 <body>
     <!------------HEADER------------------>
@@ -44,30 +46,35 @@
             </div>
         </div>
     </header>
-    <!------------END HEADER------------------>
     <div class="container text-noto-re">
-        <div class="sign-in mx-auto position-relative">
-            <h2 class="text-noto-b text-center fs-3">Đăng nhập vào The Wall</h2>
-            <form action="">
+        <div class="sign-up-site mx-auto p-sm-5 p-4 position-relative">
+            <h2 class="text-noto-b text-center fs-3">Đăng ký tài khoản The Wall</h2>
+            <form action="" id="form-sign-up">
                 <div class="input ps-2 my-4">
                     <img src="../assets/image/sign-in/user.png" alt="">
                     <input type="text" name="user-name" placeholder="Tên đăng nhập" required>
                 </div>
+                <div class="input ps-2 my-4">
+                    <img src="../assets/image/email.png" alt="">
+                    <input type="email" name="email" placeholder="Email" >
+                </div>
+                <div class="input ps-2 my-4">
+                    <img src="../assets/image/sign-in/padlock.png" alt="">
+                    <input type="password" name="pwd" id="pwd" placeholder="Mật khẩu" required>
+                </div>
                 <div class="input ps-2 my-2">
                     <img src="../assets/image/sign-in/padlock.png" alt="">
-                    <input type="password" name="pass" placeholder="Mật khẩu" required>
+                    <input type="password" name="repwd" id="repwd" placeholder="Nhập lại mật khẩu" required>
                 </div>
-                <a class="fs-14 text-dark" href="">Bạn quên mật khẩu??</a>
-                <button class="d-block border-0 bg-web text-white w-100 my-4 p-2 fs-14 text-noto-b" type="submit">ĐĂNG NHẬP</button>
+                <button class="d-block border-0 bg-web text-white w-100 my-4 p-2 fs-14 text-noto-b" type="submit">ĐĂNG KÝ</button>
                 <hr width="100%"/>
                 <span>or</span>
             </form>
-            <button class="btn-gg d-block border-0 text-white w-100 p-2 mb-4 fs-14 text-noto-b" type="submit">Đăng nhập với Google</button>
-            <p>Chưa có tài khoản? Nhấn <a href="">vào đây</a> để dễ dàng tạo tài khoản mới.</p>
+            <button class="btn-gg d-block border-0 text-white w-100 p-2 mb-4 fs-14 text-noto-b" type="submit">Đăng ký với Google</button>
         </div>
     </div>
+    <script src="../assets/javascript/sign-up.js"></script>
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
-    <script src="../assets/javascript/sign-in.js"></script>
 </body>
 </html>
