tách header css

--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Wall - Sign in</title>
+    <title>The Wall - Danh sách công việc</title>
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/style/sign-in.css">
+    <link rel="stylesheet" href="../assets/style/list-job.css">
     <link rel="stylesheet" href="../assets/style/base.css">
     <link rel="stylesheet" href="../assets/style/header.css">
-
 </head>
 <body>
     <!------------HEADER------------------>
@@ -46,30 +45,5 @@
             </div>
         </div>
     </header>
-    <!------------END HEADER------------------>
-    <div class="container text-noto-re">
-        <div class="sign-in mx-auto position-relative">
-            <h2 class="text-noto-b text-center fs-3">Đăng nhập vào The Wall</h2>
-            <form action="">
-                <div class="input ps-2 my-4">
-                    <img src="../assets/image/sign-in/user.png" alt="">
-                    <input type="text" name="user-name" placeholder="Tên đăng nhập" required>
-                </div>
-                <div class="input ps-2 my-2">
-                    <img src="../assets/image/sign-in/padlock.png" alt="">
-                    <input type="password" name="pass" placeholder="Mật khẩu" required>
-                </div>
-                <a class="fs-14 text-dark" href="">Bạn quên mật khẩu??</a>
-                <button class="d-block border-0 bg-web text-white w-100 my-4 p-2 fs-14 text-noto-b" type="submit">ĐĂNG NHẬP</button>
-                <hr width="100%"/>
-                <span>or</span>
-            </form>
-            <button class="btn-gg d-block border-0 text-white w-100 p-2 mb-4 fs-14 text-noto-b" type="submit">Đăng nhập với Google</button>
-            <p>Chưa có tài khoản? Nhấn <a href="">vào đây</a> để dễ dàng tạo tài khoản mới.</p>
-        </div>
-    </div>
-    <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
-    <script src="../assets/javascript/sign-in.js"></script>
 </body>
 </html>
