--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -8,8 +8,7 @@
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/style/sign-up.css">
     <link rel="stylesheet" href="../assets/style/base.css">
-    
-
+    <link rel="stylesheet" href="../assets/style/header.css">
 </head>
 <body>
     <!------------HEADER------------------>
