--- a/pages/hello-hr.html
+++ b/pages/hello-hr.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Wall - Providing chances</title>
+
+    <link rel="shortcut icon" href="../assets/image/logo.png" type="image/x-icon"/>
+
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/style/hello-hr.css">
     <link rel="stylesheet" href="../assets/style/base.css">
@@ -13,10 +16,10 @@
 <body>
     <!------------HEADER------------------>
     <header class="bg-web position-fixed top-0 w-100">
-        <div class="container ">
+        <div class="container">
             <div class=" header d-flex row justify-content-between align-content-center">
                 <div class="logo col-5  d-flex align-items-center">
-                    <img class="img-logo" src="../assets/image/logo.png" alt="">
+                    <img class="img-logo me-2" src="../assets/image/logo.png" alt="">
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
                 <div class="button-header pt-2 col-7 align-content-center justify-content-end d-flex fs-14">
@@ -123,10 +126,9 @@
             </div>
         </div>
     </footer>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script> AOS.init(); </script>
 </body>
 </html>
