--- a/pages/hello.html
+++ b/pages/hello.html
@@ -7,6 +7,7 @@
     <title>The Wall - Providing chances</title>
 
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="../assets/style/hello.css">
     <link rel="stylesheet" href="../assets/style/base.css">
     <link
@@ -66,7 +67,8 @@
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
-            <div class="px-md-0 px-4 row member-registration d-flex overflow-hidden"
+            <div 
+                class="px-md-0 px-4 row member-registration d-flex overflow-hidden"
                 data-aos="fade-down"
                 data-aos-offset="200"
                 data-aos-delay="50"
