--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -183,7 +183,7 @@
                                     <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
                                 </div>
                                 <div class="save-job">
-                                    <i class="far fa-bookmark icon-save"></i>
+                                    <i class="far fa-bookmark icon-save" id="icon-1"></i>
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
@@ -210,7 +210,7 @@
                                     <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
                                 </div>
                                 <div class="save-job">
-                                    <i class="far fa-bookmark icon-save"></i>
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
@@ -236,7 +236,7 @@
                                     <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
                                 </div>
                                 <div class="save-job">
-                                    <i class="far fa-bookmark icon-save"></i>
+                                    <i class="far fa-bookmark icon-save" id="icon-3"></i>
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
@@ -262,7 +262,7 @@
                                     <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
                                 </div>
                                 <div class="save-job">
-                                    <i class="far fa-bookmark icon-save"></i>
+                                    <i class="far fa-bookmark icon-save" id="icon-4"></i>
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
@@ -288,7 +288,7 @@
                                     <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
                                 </div>
                                 <div class="save-job">
-                                    <i class="far fa-bookmark icon-save"></i>
+                                    <i class="far fa-bookmark icon-save" id="icon-5"></i>
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
