--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>The Wall - Danh sách công việc</title>
+
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+    
+    <!-- Favicons -->
     <link rel="shortcut icon" href="../assets/image/logo.png" type="image/x-icon"/>
+
+    <!-- Vendor CSS Files -->
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/style/list-job.css">
-    <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/header.css">
-    <link rel="stylesheet" href="../assets/style/footer.css">
-    <link rel="stylesheet" href="../assets/vendor/fontawesome/css/all.css">
+    <link href="../assets/vendor/fontawesome/css/all.css" rel="stylesheet">
+
+    <!-- Template Main CSS Files -->
+    <link href="../assets/style/list-job.css" rel="stylesheet">
+    <link href="../assets/style/base.css" rel="stylesheet">
+    <link href="../assets/style/header.css" rel="stylesheet">
+    <link href="../assets/style/footer.css" rel="stylesheet">
+
 </head>
 <body>
-    <!------------HEADER------------------>
+    <!-- ========== HEADER ========== -->
     <header class="bg-web position-fixed top-0 w-100">
-        <div class="container ">
-            <div class=" header d-flex row justify-content-between ">
+        <div class="container">
+            <div class="header row justify-content-between ">
                 <div class="logo col-md-2  col-10 d-flex align-items-center">
                     <img class="img-logo" src="../assets/image/logo.png" alt="">
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
                 <div class="icon-menu col-2 align-items-center ">
-                    <img src="../assets/image/menu(1).png" alt="">
+                    <img src="../assets/image/menu.png" alt="">
                 </div>
                 <div class="nav d-md-flex col-md-10 col-9 row justify-content-between align-items-center">
                     <div class="icon-close">
@@ -37,7 +48,7 @@
                     </div>
                     <div class="col-md-6 row justify-content-between align-items-center">
                         <div class="sign-up col-md-6 col-12">
-                            <a class=" fs-14 text-decoration-none me-4 text-light" href="">ĐĂNG NHẬP</a>
+                            <a class=" fs-14 text-decoration-none me-4 text-light font-NotoSans-Regular" href="">ĐĂNG NHẬP</a>
                             <a class=" fs-14 text-decoration-none text-light" href="">ĐĂNG KÝ</a> 
                         </div>
                         <div class="col-md-6 col-12 ">
