add new font Work Sans

--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -11,7 +11,7 @@
     <meta content="" name="keywords">
     
     <!-- Favicons -->
-    <link rel="shortcut icon" href="../assets/image/logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../assets/favicon/favicon.ico" type="image/x-icon"/>
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
