--- a/pages/job-description.html
+++ b/pages/job-description.html
@@ -30,8 +30,8 @@
                     </div>
                     <div class="nav-menu row col-md-6 col-12 ">
                         <ul class="list-unstyled mb-0 ">
-                            <li class="d-inline-block me-4"><a class="text-decoration-none text-light" href="">CƠ HỘI VIỆC LÀM</a></li>
-                            <li class="d-inline-block"><a class="text-decoration-none text-light" href="">DANH SÁCH CÔNG TY</a></li>
+                            <li class="d-inline-block me-4"><a class="text-decoration-none font-NotoSans-Regular text-light" href="">CƠ HỘI VIỆC LÀM</a></li>
+                            <li class="d-inline-block"><a class="text-decoration-none font-NotoSans-Regular text-light" href="">DANH SÁCH CÔNG TY</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 row justify-content-between align-items-center d-none">
@@ -43,17 +43,39 @@
                             <button class="float-md-end p-2 fs-14 btn-employer bg-btn border-0">NHÀ TUYỂN DỤNG <img src="../assets/image/Arrow 1.png" alt=""></button>
                         </div>
                     </div>
-                    <div class="user-control">
-                        <div class="icon-notify">
-                            
+                    <div class=" col-md-6 row justify-content-md-end ps-4 justify-content-start align-items-center">
+                        <div class="icon-notify me-3 gx-0">
+                            <img class="w-100" src="../assets/image/bell.png" alt="">
+                        </div>
+                        <div class="img-user">
+                            <img class="w-100" src="../assets/image/horror.png" alt="">
+                        </div>
+                        <div class="control-user accordion accordion-flush" id="accordion">
+                            <div class="accordion-item bg-transparent  position-relative ">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button fs-14 text-white bg-transparent collapsed name-user" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      MINH VO
+                                    </button>
+                                  </h2>
+                                <div id="flush-collapseOne" class=" dropdown bg-white accordion-collapse collapse position-absolute"  aria-labelledby="flush-headingOne" data-bs-parent="#accordionFilter">
+                                    <div class="pt-2">
+                                        <ul class="list-unstyled">
+                                            <li><a href="">Quản lí hồ sơ</a> </li>
+                                            <li><a href="">Đơn ứng tuyển của tôi</a> </li>
+                                            <li><a href="">Cài đặt tài khoản</a> </li>
+                                            <li><a href="">Đăng xuất</a> </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
     <script src="../assets/javascript/header.js"></script>
-    <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
