--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -55,9 +55,38 @@
                             <button class="float-md-end p-2 fs-14 btn-employer bg-btn border-0">NHÀ TUYỂN DỤNG <img src="../assets/image/Arrow 1.png" alt=""></button>
                         </div>
                     </div>
+                    <!--Bảng điều khiên khi đăng nhập user-->
+                    <div class="for-user col-md-6 row justify-content-md-end ps-4 justify-content-start align-items-center">
+                        <div class="icon-notify me-3 gx-0">
+                            <img class="w-100" src="../assets/image/bell.png" alt="">
+                        </div>
+                        <div class="img-user">
+                            <img class="w-100" src="../assets/image/horror.png" alt="">
+                        </div>
+                        <div class="control-user accordion accordion-flush" id="accordion">
+                            <div class="accordion-item bg-transparent  position-relative ">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="name-user accordion-button fs-14 text-white bg-transparent collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      MINH VO
+                                    </button>
+                                  </h2>
+                                <div id="flush-collapseOne" class=" dropdown bg-white accordion-collapse collapse position-absolute"  aria-labelledby="flush-headingOne" data-bs-parent="#accordionFilter">
+                                    <div class="pt-2">
+                                        <ul class="list-unstyled">
+                                            <li><a href="">Quản lí hồ sơ</a> </li>
+                                            <li><a href="">Đơn ứng tuyển của tôi</a> </li>
+                                            <li><a href="">Cài đặt tài khoản</a> </li>
+                                            <li><a href="">Đăng xuất</a> </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
     </header>
     <div id="content" class="text-noto-re pt-5 pb-5 mb-5">
         <div class="container">
